--- a/.github/actions/git-get-last-tag/action.yaml
+++ b/.github/actions/git-get-last-tag/action.yaml
@@ -11,7 +11,10 @@ inputs:
     default: 'v[0-9]*.[0-9]*.[0-9]*'
   starting-tag:
     required: false
-    default: 'v0.0.0'  
+    default: 'v0.0.0'
+  branch:
+    required: false
+    default: main
 outputs:
   LAST_TAG:
     description: last git tag found
@@ -36,8 +39,17 @@ runs:
       echo -e "${CYAN}[ INFO ] > Fetching all tags${BLANK}"
       git fetch --force --tags --all
 
+      echo -e "${CYAN}[ INFO ] > display tags${BLANK}"
+      git tag
+
+      echo -e "${CYAN}[ INFO ] > display ref tags${BLANK}"
+      git show-ref --tags
+
       echo -e "${YELLOW}[ EXECUTING ] > Getting last tag from pattern ${PURPLE}${{ inputs.pattern }}${BLANK}"
-      LAST_TAG=$(git -C ${{ inputs.git-workdir }} describe --tags --match ${{ inputs.pattern }} --abbrev=0)
+      # LAST_TAG=$(git -C ${{ inputs.git-workdir }} describe --tags --match ${{ inputs.pattern }} --abbrev=0)
+
+      LAST_TAG=$(git tag --merged ${{ inputs.branch }} | grep -E "${{ inputs.pattern }}" | sort -rV | head -1)
+
       if [[ -n "${LAST_TAG}" ]]; then
         echo -e "${CYAN}[ INFO ] > Last tag is ${PURPLE}${LAST_TAG}${BLANK}"
       else
