--- a/.github/workflows/__update-PR__.yaml
+++ b/.github/workflows/__update-PR__.yaml
@@ -27,7 +27,8 @@ on:
       component-path-position:
         required: false
         default: 2
-        type: number
+        type: number        
+
 jobs:
   update-pr-title:
     name: update-pr-title
@@ -43,26 +44,27 @@ jobs:
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.2.0
+        uses: ixxeL-actions/workflows/.github/actions/git-config@main
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Get component name
         id: get-component-name
-        uses: ixxeL-actions/workflows/.github/actions/dynamic-fetch-component@v1.2.0
+        uses: ixxeL-actions/workflows/.github/actions/dynamic-fetch-component@main
         with:
           component-path-position: ${{ inputs.component-path-position }}
         env:
           GH_TOKEN: ${{ github.token }}
       - name: Get last tag
         id: get-last-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@v1.2.0
+        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@main
         with:
           pattern: "*-[0-9]*.[0-9]*.[0-9]*"
           git-workdir: ${{ inputs.workingdir }}
-      - name: Update PR title
+      - name: Update PR title 
         id: update-pr-title
-        uses: ixxeL-actions/workflows/.github/actions/gh-update-pr-title@v1.2.0
+        uses: ixxeL-actions/workflows/.github/actions/gh-update-pr-title@main
         with:
           pattern: '${{ github.event.pull_request.head.ref }}-(${{ steps.get-component-name.outputs.COMPONENT_NAME }})'
         env:
           GH_TOKEN: ${{ github.token }}
+    
