--- a/.github/workflows/update-pr-title.yaml
+++ b/.github/workflows/update-pr-title.yaml
@@ -5,8 +5,9 @@ on:
     secrets:
       git-token:
         required: false
+
 jobs:
   update-pr-title:
-    uses: ixxeL-actions/workflows/.github/workflows/__update-PR__.yaml@v1.2.0
+    uses: ixxeL-actions/workflows/.github/workflows/__update-PR__.yaml@main
     secrets:
       git-token: ${{ secrets.git-token }}
