fix(workflow) : fixed auto tag last commit

--- a/.github/actions/git-revert/action.yaml
+++ b/.github/actions/git-revert/action.yaml
@@ -4,7 +4,7 @@ description: Reverting a commit
 author: fspiers
 inputs:
   tag:
-    required: true
+    required: false
   git-workdir:
     required: false
     default: .
