:package: CI release version v1.2.1 from user ixxeL2097 [skip ci]

--- a/.github/workflows/AUTO_TAG.yaml
+++ b/.github/workflows/AUTO_TAG.yaml
@@ -14,7 +14,7 @@ on:
         description: Kind of version bump
 jobs:
   auto-tag-repo:
-    uses: ixxeL-actions/workflows/.github/workflows/__auto-tag__.yaml@main
+    uses: ixxeL-actions/workflows/.github/workflows/__auto-tag__.yaml@v1.2.1
     with:
       increment: ${{ inputs.increment }}
       git-workdir: .github
