--- a/.github/workflows/__auto-tag__.yaml
+++ b/.github/workflows/__auto-tag__.yaml
@@ -76,36 +76,36 @@ jobs:
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@main
+        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.2.1
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Get last tag
         id: get-last-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@v1.2.1
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Bump version
         id: bump-version
-        uses: ixxeL-actions/workflows/.github/actions/bump-version@main
+        uses: ixxeL-actions/workflows/.github/actions/bump-version@v1.2.1
         with:
           increment: ${{ inputs.increment }}
           current-version: ${{ steps.get-last-tag.outputs.LAST_TAG }}
       - name: Substitute ref
         id: substitute-ref
-        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
+        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@v1.2.1
         with:
           workflows-directory: ${{ inputs.workflows-directory }}
           actions-source: ${{ inputs.actions-source }}
           new-ref: ${{ steps.bump-version.outputs.VERSION }}
       - name: Update changelog
         id: changelog
-        uses: ixxeL-actions/workflows/.github/actions/generate-changelog@main
+        uses: ixxeL-actions/workflows/.github/actions/generate-changelog@v1.2.1
         with:
           workingdir: ${{ inputs.workingdir }}
           release-name: ${{ steps.bump-version.outputs.VERSION }}
       - name: Git push
         id: git-push
-        uses: ixxeL-actions/workflows/.github/actions/git-push@main
+        uses: ixxeL-actions/workflows/.github/actions/git-push@v1.2.1
         with:
           git-msg: ':package: CI release version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]'
           git-workdir: ${{ inputs.workingdir }}
@@ -113,7 +113,7 @@ jobs:
           push-option: ${{ inputs.push-option }}
       - name: GH Release
         id: gh-release
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@v1.2.1
         with:
           tag: ${{ steps.bump-version.outputs.VERSION }}
           verify-tag: ${{ inputs.release-verify-tag }}
@@ -130,13 +130,13 @@ jobs:
           fi
       - name: Delete git tag
         id: git-tag-delete
-        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@v1.2.1
         with:
           tag: ${{ steps.extract-major.outputs.BASE_VERSION }}
           git-workdir: ${{ inputs.workingdir }}
       - name: Git update base tag
         id: git-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@v1.2.1
         with:
           tag-msg: 'update tag semver [skip ci]'
           tag-value: ${{ steps.extract-major.outputs.BASE_VERSION }}
@@ -145,7 +145,7 @@ jobs:
           commit-sha: ${{ steps.git-push.outputs.GIT_PUSHED_COMMIT_SHA }}
       - name: Git revert to main
         id: git-revert
-        uses: ixxeL-actions/workflows/.github/actions/git-revert@main
+        uses: ixxeL-actions/workflows/.github/actions/git-revert@v1.2.1
         with:
           git-workdir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
