--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -51,14 +51,13 @@ on:
         required: false
         default: true
         type: boolean
-
 jobs:
   docker-test-build:
     concurrency:
       group: '${{ github.workflow }}-${{ github.head_ref }}'
       cancel-in-progress: true
     if: (!contains(fromJSON('["refs/heads/master", "refs/heads/main"]'), github.ref))
-    uses: ixxeL-actions/workflows/.github/workflows/__trunk-img-builder__.yaml@main
+    uses: ixxeL-actions/workflows/.github/workflows/__trunk-img-builder__.yaml@v1.2.1
     with:
       build-image: ${{ inputs.build-image }}
       component: ${{ inputs.component }}
@@ -82,7 +81,7 @@ jobs:
       group: '${{ github.ref }}'
       cancel-in-progress: true
     if: contains(fromJSON('["refs/heads/master", "refs/heads/main"]'), github.ref)
-    uses: ixxeL-actions/workflows/.github/workflows/__trunk-img-builder__.yaml@main
+    uses: ixxeL-actions/workflows/.github/workflows/__trunk-img-builder__.yaml@v1.2.1
     with:
       build-image: ${{ inputs.build-image }}
       component: ${{ inputs.component }}
