--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,40 +1,38 @@
 ---
+default_install_hook_types: [pre-commit, commit-msg]
+default_stages: [commit, manual]
+fail_fast: false
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
-  hooks:
-  - id: check-yaml
-    exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
-# - repo: https://github.com/pre-commit/pre-commit-hooks
-#   rev: v4.4.0
-#   hooks:
-#   - id: trailing-whitespace
-#   - id: end-of-file-fixer
-#   - id: detect-private-key
-#   - id: check-json
-#   - id: check-case-conflict
-#   - id: check-executables-have-shebangs
-#   - id: check-docstring-first
-# - repo: https://github.com/adrienverge/yamllint
-#   rev: v1.30.0
-#   hooks:
-#   - id: yamllint
-#     args: [--config-file, .yamllint-cfg.yaml]
-#     exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
-# - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
-#   rev: 0.2.2
-#   hooks:
-#   - id: yamlfmt
-#     args: [--mapping, '2', --sequence, '2', --offset, '0', --width, '600']
-#     exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
-# - repo: https://github.com/hadolint/hadolint
-#   rev: v2.12.1-beta
-#   hooks:
-#   - id: hadolint
-#     verbose: true
-#     args: [src/Dockerfile, --failure-threshold, error]
-# - repo: https://github.com/bridgecrewio/checkov.git
-#   rev: 2.3.165
-#   hooks:
-#   - id: checkov
-#     args: [--directory, ., --compact, --soft-fail]
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v2.3.0
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
+        args: []
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: trailing-whitespace
+      - id: mixed-line-ending
+      - id: end-of-file-fixer
+      - id: requirements-txt-fixer
+      - id: check-added-large-files
+      - id: check-json
+      - id: check-merge-conflict
+      - id: detect-private-key
+      - id: check-executables-have-shebangs
+      - id: check-docstring-first
+  - repo: https://github.com/mpalmer/action-validator
+    rev: v0.5.3
+    hooks:
+      - id: action-validator
+        files: '.github/.*/.*\.ya?ml'
+  - repo: https://github.com/sirosen/check-jsonschema
+    rev: 0.23.3
+    hooks:
+      - id: check-github-actions
+      - id: check-github-workflows
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0
+    hooks:
+      - id: prettier
