--- a/.github/workflows/AUTO_TAG.yaml
+++ b/.github/workflows/AUTO_TAG.yaml
@@ -1,22 +1,15 @@
 ---
 name: Auto tag workflows
 on:
-  workflow_dispatch:
-    inputs:
-      increment:
-        required: true
-        type: choice
-        options:
-          - "fix"
-          - "minor"
-          - "major"
-        default: "fix"
-        description: Kind of version bump
+  push:
+    branches:
+      - main
+    paths:
+      - .github/**
 jobs:
   auto-tag-repo:
     uses: ixxeL-actions/workflows/.github/workflows/__auto-tag__.yaml@main
     with:
-      increment: ${{ inputs.increment }}
       git-workdir: .github
     secrets:
       git-token: ${{ secrets.PAT }}
