--- a/.github/workflows/PRE-COMMIT.yaml
+++ b/.github/workflows/PRE-COMMIT.yaml
@@ -30,7 +30,7 @@ jobs:
       - uses: pre-commit/action@v3.0.0
       - name: Shellcheck GHA
         id: shellcheck-gha
-        uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@main
+        uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@v1.3.0
         with:
           path: .github/
           exclude: ".github/workflows/*"
