--- a/.github/workflows/__auto-tag__.yaml
+++ b/.github/workflows/__auto-tag__.yaml
@@ -76,43 +76,43 @@ jobs:
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@main
+        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.3.0
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Get last tag
         id: get-last-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@v1.3.0
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Detect bump
         id: detect-bump
-        uses: ixxeL-actions/workflows/.github/actions/detect-bump@main
+        uses: ixxeL-actions/workflows/.github/actions/detect-bump@v1.3.0
         with:
           release-regex: '\s*:package: CI release version ${{ steps.get-last-tag.outputs.LAST_TAG }}.+'
           minor-regex: ^(feat/.+)$
           major-regex: ^((((feat|fix|chore|docs|perf|refactor|build|ci|revert|style|test)!)|(!(feat|fix|chore|docs|perf|refactor|build|ci|revert|style|test)))/.+)$
       - name: Bump version
         id: bump-version
-        uses: ixxeL-actions/workflows/.github/actions/bump-version@main
+        uses: ixxeL-actions/workflows/.github/actions/bump-version@v1.3.0
         with:
           increment: ${{ steps.detect-bump.outputs.BUMP_KIND }}
           current-version: ${{ steps.get-last-tag.outputs.LAST_TAG }}
       - name: Substitute ref
         id: substitute-ref
-        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@main
+        uses: ixxeL-actions/workflows/.github/actions/change-action-ref@v1.3.0
         with:
           workflows-directory: ${{ inputs.workflows-directory }}
           actions-source: ${{ inputs.actions-source }}
           new-ref: ${{ steps.bump-version.outputs.VERSION }}
       - name: Update changelog
         id: changelog
-        uses: ixxeL-actions/workflows/.github/actions/generate-changelog@main
+        uses: ixxeL-actions/workflows/.github/actions/generate-changelog@v1.3.0
         with:
           workingdir: ${{ inputs.workingdir }}
           release-name: ${{ steps.bump-version.outputs.VERSION }}
       - name: Git push
         id: git-push
-        uses: ixxeL-actions/workflows/.github/actions/git-push@main
+        uses: ixxeL-actions/workflows/.github/actions/git-push@v1.3.0
         with:
           git-msg: ":package: CI release version ${{ steps.bump-version.outputs.VERSION }} from user ${GITHUB_ACTOR} [skip ci]"
           git-workdir: ${{ inputs.workingdir }}
@@ -120,7 +120,7 @@ jobs:
           push-option: ${{ inputs.push-option }}
       - name: GH Release
         id: gh-release
-        uses: ixxeL-actions/workflows/.github/actions/gh-release@main
+        uses: ixxeL-actions/workflows/.github/actions/gh-release@v1.3.0
         with:
           tag: ${{ steps.bump-version.outputs.VERSION }}
           verify-tag: ${{ inputs.release-verify-tag }}
@@ -137,13 +137,13 @@ jobs:
           fi
       - name: Delete git tag
         id: git-tag-delete
-        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag-delete@v1.3.0
         with:
           tag: ${{ steps.extract-major.outputs.BASE_VERSION }}
           git-workdir: ${{ inputs.workingdir }}
       - name: Git update base tag
         id: git-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-tag@v1.3.0
         with:
           tag-msg: "update tag semver [skip ci]"
           tag-value: ${{ steps.extract-major.outputs.BASE_VERSION }}
@@ -152,7 +152,7 @@ jobs:
           commit-sha: ${{ steps.git-push.outputs.GIT_PUSHED_COMMIT_SHA }}
       - name: Git revert to main
         id: git-revert
-        uses: ixxeL-actions/workflows/.github/actions/git-revert@main
+        uses: ixxeL-actions/workflows/.github/actions/git-revert@v1.3.0
         with:
           git-workdir: ${{ inputs.workingdir }}
           push-option: ${{ inputs.push-option }}
