--- a/.github/workflows/PRE-COMMIT.yaml
+++ b/.github/workflows/PRE-COMMIT.yaml
@@ -1,3 +1,4 @@
+---
 name: Pre-commit check
 on:
   pull_request:
@@ -7,31 +8,5 @@ on:
     branches:
       - "main"
 jobs:
-  pre-commit:
-    name: Check GHA templates
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    container:
-      image: ixxel/toolbox:builder-latest
-    steps:
-      - uses: actions/checkout@v3
-      - id: prepare
-        run: |
-          if [[ $(action-validator --version) ]]
-          then
-              echo "skipping installation"
-          else
-            VERSION=$(curl -sSLf https://github.com/mpalmer/action-validator/releases | grep -oE "v[0-9]{1,2}\.[0-9]{1,2}\.[0-9]{1,2}" | uniq | sort -rV | head -1)
-            wget https://github.com/mpalmer/action-validator/releases/download/${VERSION}/action-validator_linux_amd64
-            chmod +x action-validator_linux_amd64
-            sudo mv action-validator_linux_amd64 /usr/local/bin/action-validator
-          fi
-        shell: bash
-      - uses: pre-commit/action@v3.0.0
-      - name: Shellcheck GHA
-        id: shellcheck-gha
-        uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@main
-        with:
-          path: .github/
-          exclude: ".github/workflows/*"
-          severity: warning
+  update-pr:
+    uses: ixxeL-actions/workflows/.github/workflows/__check-gha-templates__.yaml@main
