--- a/.github/workflows/AUTO_TAG.yaml
+++ b/.github/workflows/AUTO_TAG.yaml
@@ -8,7 +8,7 @@ on:
       - .github/**
 jobs:
   auto-tag-repo:
-    uses: ixxeL-actions/workflows/.github/workflows/__auto-tag__.yaml@main
+    uses: ixxeL-actions/workflows/.github/workflows/__auto-tag__.yaml@v1.3.1
     with:
       git-workdir: .github
     secrets:
