--- a/.github/workflows/__check-gha-templates__.yaml
+++ b/.github/workflows/__check-gha-templates__.yaml
@@ -28,6 +28,7 @@ on:
         required: false
         default: .github/workflows/*
         type: string
+
 jobs:
   check-gha-templates:
     name: Check GHA templates
@@ -41,7 +42,7 @@ jobs:
         shell: bash
       - name: Shellcheck GHA
         id: shellcheck-gha
-        uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@v1.3.1
+        uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@main
         with:
           path: ${{ inputs.shellcheck-path }}
           exclude: ${{ inputs.shellcheck-exclude }}
