--- a/.github/workflows/__check-gha-templates__.yaml
+++ b/.github/workflows/__check-gha-templates__.yaml
@@ -38,6 +38,10 @@ jobs:
       image: ${{ inputs.ci-image }}
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-3|/usr/bin/|${{ hashFiles('.pre-commit-config.yaml') }}
       - run: pre-commit run --show-diff-on-failure --color=always ${{ inputs.extra_args }}
         shell: bash
       - name: Shellcheck GHA
