--- a/.github/workflows/__check-gha-templates__.yaml
+++ b/.github/workflows/__check-gha-templates__.yaml
@@ -38,6 +38,7 @@ jobs:
       image: ${{ inputs.ci-image }}
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pre-commit
