--- a/.github/actions/shellcheck-gha/action.yaml
+++ b/.github/actions/shellcheck-gha/action.yaml
@@ -1,7 +1,7 @@
 ---
 name: Shellcheck GHA
 description: Shellcheck for GH actions
-author: fspiers
+author: ixxeL
 inputs:
   path:
     description: path to look for
