--- a/.github/actions/dynamic-fetch-component/action.yaml
+++ b/.github/actions/dynamic-fetch-component/action.yaml
@@ -40,7 +40,7 @@ runs:
           fi
         done
 
-        if [[ ${#uniq_components[@]} -gt 0 ]]; then
+        if [[ ${#uniq_components[*]} -gt 0 ]]; then
           echo -e "${CYAN}[ INFO ] > Component name is ${YELLOW}${uniq_components[0]}${BLANK}"
           echo "COMPONENT_NAME=${uniq_components[0]}" >> $GITHUB_OUTPUT
           exit 0
