--- a/.github/actions/dynamic-fetch-component/action.yaml
+++ b/.github/actions/dynamic-fetch-component/action.yaml
@@ -34,7 +34,7 @@ runs:
           echo -e "${CYAN}[ INFO ] > Changed path is ${YELLOW}${file}${BLANK}"
           COMPONENT_NAME=$(echo ${file} | awk -F'/' -v nb="${{ inputs.component-path-position }}" '{print $nb}')
           if [[ "$COMPONENT_NAME" != ".github" ]]; then
-            if [[ ! " ${uniq_components[*]} " =~ " $COMPONENT_NAME " ]]; then
+            if [[ ! " ${uniq_components[*]} " =~ $COMPONENT_NAME ]]; then
               uniq_components+=("$COMPONENT_NAME")
             fi
           fi
