--- a/.github/actions/dynamic-fetch-component/action.yaml
+++ b/.github/actions/dynamic-fetch-component/action.yaml
@@ -24,7 +24,7 @@ runs:
 
         PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
         echo -e "${CYAN}[ INFO ] > PR number is ${YELLOW}${PR_NUMBER}${BLANK}"
-        declare -A changed_files
+        # declare -A changed_files
         declare -a uniq_components
         changed_files=$(gh pr view ${PR_NUMBER} --json files --jq '.files.[].path')
         IFS=$'\n' read -rd '' -a files_array <<<"$changed_files"
@@ -34,7 +34,7 @@ runs:
           echo -e "${CYAN}[ INFO ] > Changed path is ${YELLOW}${file}${BLANK}"
           COMPONENT_NAME=$(echo ${file} | awk -F'/' -v nb="${{ inputs.component-path-position }}" '{print $nb}')
           if [[ "$COMPONENT_NAME" != ".github" ]]; then
-            if [[ ! " ${uniq_components[@]} " =~ " $COMPONENT_NAME " ]]; then
+            if [[ ! " ${uniq_components[*]} " =~ $COMPONENT_NAME ]]; then
               uniq_components+=("$COMPONENT_NAME")
             fi
           fi
