--- a/.github/workflows/PRE-COMMIT.yaml
+++ b/.github/workflows/PRE-COMMIT.yaml
@@ -8,5 +8,5 @@ on:
     branches:
       - "main"
 jobs:
-  update-pr:
+  check-gha-templates:
     uses: ixxeL-actions/workflows/.github/workflows/__check-gha-templates__.yaml@main
