--- a/.github/workflows/__check-gha-templates__.yaml
+++ b/.github/workflows/__check-gha-templates__.yaml
@@ -8,11 +8,6 @@ on:
         required: false
         default: "--all-files"
         type: string
-      ci-image:
-        description: Docker image used for CI jobs
-        required: false
-        default: ixxel/toolbox:ci-latest
-        type: string
       shellcheck-severity:
         description: Severity for shellcheck scan
         required: false
@@ -28,18 +23,17 @@ on:
         required: false
         default: .github/workflows/*
         type: string
-
 jobs:
   check-gha-templates:
     name: Check GHA templates
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    container:
-      image: ${{ inputs.ci-image }}
     steps:
       - uses: actions/checkout@v3
-      - run: pre-commit run --show-diff-on-failure --color=always ${{ inputs.extra_args }}
-        shell: bash
+      - uses: actions/setup-python@v4
+      - name: Pre-commit
+        id: pre-commit
+        uses: ixxeL-actions/workflows/.github/actions/pre-commit@main
       - name: Shellcheck GHA
         id: shellcheck-gha
         uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@main
