--- a/.github/workflows/__check-gha-templates__.yaml
+++ b/.github/workflows/__check-gha-templates__.yaml
@@ -33,10 +33,10 @@ jobs:
       - uses: actions/setup-python@v4
       - name: Pre-commit
         id: pre-commit
-        uses: ixxeL-actions/workflows/.github/actions/pre-commit@v1.3.2
+        uses: ixxeL-actions/workflows/.github/actions/pre-commit@main
       - name: Shellcheck GHA
         id: shellcheck-gha
-        uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@v1.3.2
+        uses: ixxeL-actions/workflows/.github/actions/shellcheck-gha@main
         with:
           path: ${{ inputs.shellcheck-path }}
           exclude: ${{ inputs.shellcheck-exclude }}
