--- a/.github/workflows/PRE-COMMIT.yaml
+++ b/.github/workflows/PRE-COMMIT.yaml
@@ -1,5 +1,5 @@
 ---
-name: Pre-commit check
+name: Check GH actions templates
 on:
   pull_request:
     types:
@@ -9,4 +9,4 @@ on:
       - "main"
 jobs:
   check-gha-templates:
-    uses: ixxeL-actions/workflows/.github/workflows/__check-gha-templates__.yaml@v132..1
+    uses: ixxeL-actions/workflows/.github/workflows/__check-gha-templates__.yaml@main
