--- a/.github/workflows/__update-PR-classic__.yaml
+++ b/.github/workflows/__update-PR-classic__.yaml
@@ -43,18 +43,18 @@ jobs:
           token: ${{ secrets.git-token }}
       - name: Git config
         id: git-config
-        uses: ixxeL-actions/workflows/.github/actions/git-config@main
+        uses: ixxeL-actions/workflows/.github/actions/git-config@v1.3.3
         with:
           git-workdir: ${{ inputs.workingdir }}
       - name: Get last tag
         id: get-last-tag
-        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@main
+        uses: ixxeL-actions/workflows/.github/actions/git-get-last-tag@v1.3.3
         with:
           pattern: "*-[0-9]*.[0-9]*.[0-9]*"
           git-workdir: ${{ inputs.workingdir }}
       - name: Update PR title
         id: update-pr-title
-        uses: ixxeL-actions/workflows/.github/actions/gh-update-pr-title@main
+        uses: ixxeL-actions/workflows/.github/actions/gh-update-pr-title@v1.3.3
         with:
           pattern: ${{ inputs.pr-pattern }}
         env:
